# CHIP-8_Emu

./: CMakeLists.txt
src/: CHIP8.cpp  CHIP8.h  main.cpp
